# js-lithtech-parser

./: .gitignore  Cargo.toml  README.md  browser.js  build.rs  index.d.ts  index.js  lithtech-parser.wasi-browser.js  lithtech-parser.wasi.cjs  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
crates/napi_shadow/: Cargo.toml
crates/napi_shadow/src/: lib.rs  napi_shadow.rs  napi_shadow_root.rs
crates/napi_shadow_derive/: Cargo.toml
crates/napi_shadow_derive/src/: derive_impl.rs  lib.rs  utils.rs
src/: lib.rs
src/common/: color_argb.rs  color_bgra.rs  color_rgb.rs  color_rgba.rs  matrix.rs  mod.rs  quaternion_f32.rs  quaternion_i16_compressed.rs  string_s16.rs  string_s32.rs  string_until0.rs  vector2_f32.rs  vector3_f32.rs  vector3_i16_compressed.rs
src/common/t/: rgba.rs
src/dat/: blind_data.rs  dat_header.rs  light_data.rs  light_group.rs  lithtech_dat.rs  mod.rs  plane.rs  polygon.rs  polygon_data.rs  render_data.rs  shader_poly.rs  sky_portal.rs  surface.rs  triangle.rs  vertex.rs  world.rs  world_data.rs  world_model.rs  world_tree.rs
src/dtx/: cube_section_header.rs  dtx_header.rs  image.rs  image_compressed.rs  image_palette_32bit.rs  image_palette_8bit.rs  image_texture_32bit.rs  lithtech_dtx.rs  mipmap.rs  mod.rs
src/ltb/: anim_binding.rs  animation.rs  bone_node.rs  child_model.rs  lithtech_ltb.rs  lod_container.rs  ltb_header.rs  mod.rs  model_obb.rs  piece.rs  socket.rs  vertex_container.rs  weight_set.rs
src/util/: dxt_decompress.rs  mod.rs
zig-lib/dxt/: lib.zig
